# learning-sdk

./: README.md
.github/workflows/: publish-npm.yml
examples/: anthropic_example.py  anthropic_example.ts  claude_example.py  claude_example.ts  gemini_example.py  gemini_example.ts  openai_example.py  openai_example.ts  openai_responses_example.py  package-lock.json  package.json  pydantic_ai_example.py  quickstart.py  quickstart.ts  quickstart_async.py  tsconfig.json  utils.ts
examples/claude_agent_sdk_chat/: README.md  chat.ts
examples/claude_email_agent/: README.md  package-lock.json  package.json
examples/claude_email_agent/ccsdk/: ai-client.ts
examples/claude_excel_demo/: README.md  package.json
examples/claude_hello_world/: README.md  hello_world.ts  package-lock.json  package.json
examples/claude_research_agent/: .env.example  README.md  pyproject.toml
examples/claude_research_agent/research_agent/: agent.py
examples/claude_research_agent/research_agent/prompts/: report_writer.txt
examples/crewai_demo/: README.md  crewai_research_demo.py  requirements.txt
examples/langchain_demo/: README.md  main.py  pyproject.toml
examples/pydantic_ai_demo/: README.md  anthropic_example.py  openai_example.py
python/: pyproject.toml
python/tests/unit/: test_memory_client.py
typescript/: .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
typescript/src/: core.ts  index.ts  types.ts
typescript/tests/: README.md  anthropic.test.ts  claude.test.ts  gemini.test.ts  openai.test.ts  setup.ts
(+26 files in other folders)
